--- a/第一次作业.ipynb
+++ b/第一次作业.ipynb
@@ -120,19 +120,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 27\u001b[0m\n\u001b[0;32m     25\u001b[0m             line \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mreadline()\n\u001b[0;32m     26\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m line:\n\u001b[1;32m---> 27\u001b[0m                 \u001b[38;5;28;01mif\u001b[39;00m is_chinese(word):\n\u001b[0;32m     28\u001b[0m                     text \u001b[38;5;241m=\u001b[39m text \u001b[38;5;241m+\u001b[39m word\n\u001b[0;32m     29\u001b[0m text_processed \u001b[38;5;241m=\u001b[39m remove_punctuation(text)\n",
-      "Cell \u001b[1;32mIn[2], line 7\u001b[0m, in \u001b[0;36mis_chinese\u001b[1;34m(word)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Counter\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mis_chinese\u001b[39m(word):\n\u001b[0;32m      8\u001b[0m     pattern \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39mcompile(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m^[\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mu4e00-\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mu9fa5\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mu3000-\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mu303F\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124muFF00-\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124muFFEF]+$\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mbool\u001b[39m(pattern\u001b[38;5;241m.\u001b[39mmatch(word))\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\何明璞\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.466 seconds.\n",
+      "Prefix dict has been built successfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.722100113454257\n",
+      "9.386094430843765e-05\n"
      ]
     }
    ],
@@ -142,6 +148,7 @@
     "import unicodedata\n",
     "import re\n",
     "from collections import Counter\n",
+    "import math\n",
     "\n",
     "def is_chinese(word):\n",
     "    pattern = re.compile(r'^[\\u4e00-\\u9fa5\\u3000-\\u303F\\uFF00-\\uFFEF]+$')\n",
@@ -184,18 +191,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m10\u001b[39m):\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m10\u001b[39m):\n\u001b[1;32m---> 13\u001b[0m         file_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(folder_path,\u001b[38;5;28mstr\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwiki_\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m%\u001b[39m(\u001b[38;5;28mstr\u001b[39m(i),\u001b[38;5;28mstr\u001b[39m(n))))\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(file_path):\n\u001b[0;32m     15\u001b[0m             file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(file_path,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m,encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.802932701578525\n",
+      "0.0016731409287555087\n"
      ]
     }
    ],
